# cosmicforces

./: .env.example  .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
tui/: Cargo.toml
tui/src/: app.rs  astro.rs  guidance.rs  main.rs  ui.rs
