[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "blocking"] }
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
taivas-types = { path = "../../taivaankartta/taivas-types" }
taivas-calc = { path = "../../taivaankartta/taivas-calc" }
chrono = { version = "0.4", features = ["clock", "serde"] }
anyhow = "1.0"
